--- a/package.json
+++ b/package.json
@@ -12,5 +12,27 @@
     "render"
   ],
   "author": "zhangaifei",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "babel": "^5.8.21",
+    "express": "^4.13.3",
+    "isomorphic-fetch": "^2.2.1",
+    "qs": "^4.0.0",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "react-redux": "^4.0.0",
+    "redux": "^3.0.0",
+    "redux-thunk": "^0.1.0",
+    "serve-static": "^1.10.0"
+  },
+  "devDependencies": {
+    "babel-core": "^5.8.22",
+    "babel-loader": "^5.3.2",
+    "babel-plugin-react-transform": "^1.1.0",
+    "babel-runtime": "^5.8.20",
+    "react-transform-hmr": "^1.0.0",
+    "webpack": "^1.11.0",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.2.0"
+  }
 }
